--- a/webdriver-reporting/pom.xml
+++ b/webdriver-reporting/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>ch.vorburger.webdriver</groupId>
 	<artifactId>webdriver-reporting</artifactId>
-	<version>1.1.0-SNAPSHOT</version>
+	<version>2.0.0-SNAPSHOT</version>
 	<name>WebDriver HTML Reports</name>
 	<description>Mini Framework (Tool) which builds HTML Reports from JUnit WebDriver runs</description>
 	<packaging>jar</packaging>
@@ -32,7 +32,7 @@
 	<inceptionYear>2011</inceptionYear>
 
 	<properties>
-		<webDriver.version>2.42.2</webDriver.version>
+		<webDriver.version>3.12.0</webDriver.version>
 		<built.repo.dir>${project.build.directory}/repo</built.repo.dir>
 	</properties>
 
@@ -42,7 +42,11 @@
 			<artifactId>selenium-java</artifactId>
 			<version>${webDriver.version}</version>
 		</dependency>
-
+	<dependency>
+	  <groupId>commons-io</groupId>
+	  <artifactId>commons-io</artifactId>
+	  <version>2.6</version>
+	</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
